Alignment issue on image preview in Firefox

--- a/AdobeStockImageAdminUi/view/adminhtml/web/css/source/_module.less
+++ b/AdobeStockImageAdminUi/view/adminhtml/web/css/source/_module.less
@@ -82,7 +82,7 @@
                             display: block;
                             max-height: 500px;
                             margin-bottom: 20px;
-                            flex-basis: 300px;
+                            flex-basis: auto;
                             max-width: 60%;
                             float: left;
                             width: auto;
@@ -147,6 +147,7 @@
                 float: left;
                 min-width: 40%;
                 padding-left: 40px;
+                width: -moz-min-content;
 
                 .actions {
                     letter-spacing: -1px;
